reduced the size of the mutation diagram control area and the white space around it (fix https://github.com/cBioPortal/cbioportal/issues/2786)

Former-commit-id: 1edcbcc45a830737ffc8fe130db9edd64234f742

--- a/src/shared/components/lollipopMutationPlot/lollipopMutationPlot.module.scss
+++ b/src/shared/components/lollipopMutationPlot/lollipopMutationPlot.module.scss
@@ -13,3 +13,7 @@
   transition: opacity 0.2s;
   opacity: 1;
 }
+.input-addon {
+  padding-bottom: 3px !important;
+  padding-top: 3px !important;
+}
